# GPU-Image-Synthesis-HS-Coburg

Assignments/A0MeshViewer/: CMakeLists.txt
Assignments/A0MeshViewer/include/: PerFrameConstantsStruct.h  TextureLoader.h  TriangleApp.h  UIDataStruct.h  VertexStruct.h
Assignments/A0MeshViewer/shaders/: TriangleMesh.hlsl
Assignments/A0MeshViewer/src/: TextureLoader.cpp  TriangleApp.cpp  main.cpp
Assignments/A1SceneGraphViewer/: CMakeLists.txt
Assignments/A1SceneGraphViewer/include/: AABB.hpp  BoundingBox.h  ConstantBufferD3D12.hpp  ConstantBufferStruct.h  LightStruct.h  MaterialConstantBufferStruct.h  MaterialStruct.h  NodeStruct.h  PerMeshConstantBufferStruct.h  Scene.hpp  SceneFactory.hpp  SceneGraphViewerApp.hpp  Texture2DD3D12.hpp  TriangleMeshD3D12.hpp  UiDataStruct.h  VertexStruct.h
Assignments/A1SceneGraphViewer/shaders/: BoundingBox.hlsl  TriangleMesh.hlsl
Assignments/A1SceneGraphViewer/src/: AABB.cpp  BoundingBox.cpp  ConstantBufferD3D12.cpp  Scene.cpp  SceneFactory.cpp  SceneGraphViewerApp.cpp  Texture2DD3D12.cpp  TriangleMeshD3D12.cpp  main.cpp
Tutorials/: CMakeLists.txt
Tutorials/T02Triangle/src/: TriangleApp.cpp
Tutorials/T05RootConstant/shaders/: RootConstant.hlsl
Tutorials/T05RootConstant/src/: RootConstantApp.cpp
data/ww2_cityscene_-_carentan_inspired/: license.txt
gimslib/src/gimslib/d3d/: UploadHelper.cpp
